# renderer-demo

./: CMakeLists.txt
src/: framebuffer.h  main.cpp
src/math/: mat4.cpp  mat4.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/test/: case.cpp  case.h
